--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <input type="text" id="input">
         <input type="submit" id="actionButton">
   </form>
+  <button id="stop-slideshow">Stop Slideshow</button>
 
   <!-- <input type="text" id="input"> -->
   <!-- <button id="submit">Search the Reddit World! For pictures</button> -->
