--- a/index.html
+++ b/index.html
@@ -3,9 +3,38 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hello Front-End</title>
+  <link href="css/index.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <script src="js/index.js" defer></script>
+  <title>Reddit Fetcher</title>
 </head>
-<body>
-  <h1>Hello Front-End</h1>
+
+<body class="p-3 mb-2 bg-dark text-white">
+  <div id="containerSearch" class="container">
+    <h1>Please enter something to search Reddit</h1>
+    <form id="form">
+      <input id="input" type="text">
+      <input type="submit">
+    </form>
+  </div>
+    <div id="containerResults" class="container">
+    <button id="reset">Stop</button>
+      <div class="row">
+        <div class="col">
+          Your ad here
+        </div>
+        <div class="col-8" id="col8">
+        </div>
+        <div class="col">
+          Your ad here
+        </div>
+      </div>
+
+
+
+        
+      </div>
 </body>
+
+
 </html>
