--- a/index.html
+++ b/index.html
@@ -9,18 +9,11 @@
 </head>
 <body>
   <h1 id="heading">Search for some cool photos to grab from reddit</h1>
-  <form id="form" onsubmit="return false  ">
-    <input    type="text" id="userInput">
+  <form id="form">
+    <input    type="text" id="userInput" placeholder="Search...">
     <input   type="submit">
     </form>
-  <!-- <label for="search">Search for photo</label>
-  <input type="search" id="search" placeholder="Search..." value=""> -->
-  <!-- <button type="submit">submit</button> -->
-  <button id="stop-slide">Stop Slide</button>
-  <!-- <label id="form">Search
-      <input id="input" type="search">
-      <input type="submit">
-  </label> -->
+    <button id="stop-slide">Stop Slide</button>
   <div id="container">
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner" id="carousel-container">
@@ -31,7 +24,6 @@
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   <script src="js/index.js" defer></script>
-  <!-- <button id="stop-button">Stop Slide Show</button> -->
 </body>
 </html>
 
