--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <link href="css/style.css" rel="stylesheet" />
 
 
@@ -10,10 +10,9 @@
 </head>
 
 
-
   <body>
-    <h1 id="title">Hello Front-End</h1>
-    <h2 id="instruction">Instructions</h2>
+    <h1 id="title">Reddit Slideshow</h1>
+    <h2 id="instruction">Hi, Enter a Reddit topic in the searchbar and hit Sumbit to get back photos. Stop it with the Stop Slideshow button.</h2>
 
 
     <form id="form">
@@ -25,7 +24,7 @@
     <img id="imgDiv1">
 
 
-    <button id="stopSlideButton" type="button">stopSlideButton</button>
+    <button id="stopSlideButton" type="button">Stop Slideshow</button>
 
 
 
