--- a/index.html
+++ b/index.html
@@ -2,10 +2,20 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hello Front-End</title>
+  <link rel = "stylesheet"  href="css/style.css" />
+  <title>Slideshow Maker</title>
 </head>
 <body>
-  <h1>Hello Front-End</h1>
+  <h1>Slideshow Maker</h1>
+  <p>Enter what you want to search for below!</p>
+  <form id="form">
+    <input id="input" type="text">
+    <input type="submit">
+</form>
+<img>
+<button id = "stop">Stop</button>
+<script src="js/keep.js" defer></script>
 </body>
 </html>
