--- a/index.html
+++ b/index.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hello Front-End</title>
+  <link href="css\index.css" rel="stylesheet"/>
+  <script src="js\index.js" defer></script>
+  <title>Fetch-Reddit</title>
 </head>
+
 <body>
-  <h1>Hello Front-End</h1>
+  <h1>Search Reddit!</h1>
+    <form id="form">
+      <input id="input" type="search">  
+      <input type="submit">
+    <div id="container">
+      <img src="" alt="">
+    </div>
+    
+    <button id="stop-slide">Reset</button>
 </body>
+
 </html>
