--- a/index.html
+++ b/index.html
@@ -3,9 +3,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hello Front-End</title>
+  <link href="css/styles.css" rel="stylesheet"/>
+  <script src="js/scripts.js"></script>
+  <title>Reddit Search</title>
+  <h1>Reddit Image Searcher</h1>
+  <h3>(Type in keyword in the search field for image)</h3>
 </head>
 <body>
-  <h1>Hello Front-End</h1>
+  <form id="form">
+    <div>
+      <label>Search</label>
+      <input id="query" type="text" placeholder="Reddit Search">
+      <input type="submit" value="search">
+    </div>
+  </form>
+  <div>
+    <button id="stop">Stop</button>
+    <button id="prev">Previous</button>
+    <button id="next">Next</button>
+  </div>
+  <hr> 
+  <div id="container"></div>
 </body>
 </html>
