--- a/index.html
+++ b/index.html
@@ -3,9 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hello Front-End</title>
+  <link rel='stylesheet' href="css/index.css"></link>
+  <script src="js/index.js" defer></script>
+  <title></title>
 </head>
 <body>
-  <h1>Hello Front-End</h1>
+  <h1 id="h1">Search Reddit</h1>
+  <div id="container">
+    <form id="form">
+      <label for="search-input">What are you looking for?</label>
+      <br>
+      <input type="text" id="search-input" placeholder="Search">
+      <input type="submit" value="Submit" id="submitInput">
+    </form>
+  </div>
+  
+    <img src="" id="image">
+  
+    <button id="stop-button">stop</button>
+  
 </body>
 </html>
