--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hello Front-End</title>
+  
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" 
+  integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link href="./index.css" rel="stylesheet" />
+  <script src="./index.js" defer></script>
+  <title>Reddit post</title>
 </head>
 <body>
-  <h1>Hello Front-End</h1>
+ <img id="catImg">
+ <button id="stopbutton">stop button</button>
+  <!-- <h3 id= 'memeBtn' onclick='fetchMemes()'>Reddit post</h3> -->
+  <button id="search-btn">"search"</button>
+    <form id="form">
+        <input id="input" type="number" min="1" value="1">
+        <input type="submit">
+    </form>
+    <div id="container"></div>
 </body>
 </html>
