--- a/index.html
+++ b/index.html
@@ -2,10 +2,31 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="css/index.css" rel="stylesheet" />
+  <script src="js/index.js" defer></script>
   <title>Hello Front-End</title>
 </head>
 <body>
-  <h1>Hello Front-End</h1>
+  <div id="header">
+    <h1>Reddit Slide Show</h1>
+    <h2>Type in a search term and hit </h2>
+    <div id="form">
+      <form id="userRequest">
+        <input id="user-input" type="script">
+        <button id="button">Search </button>
+      </form>
+    </div>
+  </div>
+  <div id='image-results'>
+    <div id="pictureResults"></div>
+    <button id="stop">Stop Slideshow</button>
+
+  </div>
+  
+  
+
+
 </body>
 </html>
